kubernetes/applications/cns-edge-service/production/patch-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polar-ingress
  annotations:
    # 클러스터 외부에서 /actuator/** 엔드포인트에 대한 모든 요청을 차단
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~* "^/actuator" {
        deny all;
        return 403;
      }
